[gd_scene load_steps=13 format=3 uid="uid://cbv1iy11bd6x1"]

[ext_resource type="Script" uid="uid://c8ry4ey5mq5yc" path="res://objects/player_character_base.gd" id="1_w4qtm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5jmjx"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nhemo"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_h5vi8"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_erfry"]
height = 0.081543

[sub_resource type="SphereShape3D" id="SphereShape3D_mxwbm"]
radius = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_t5a1n"]
radius = 0.7

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mxwbm"]
height = 0.400269
radius = 0.581543

[sub_resource type="SphereShape3D" id="SphereShape3D_5jmjx"]
radius = 0.8

[sub_resource type="Animation" id="Animation_nhemo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Indicators:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Indicators:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5jmjx"]
resource_name = "default"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Indicators:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.2, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Indicators:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w4qtm"]
_data = {
&"RESET": SubResource("Animation_nhemo"),
&"default": SubResource("Animation_5jmjx")
}

[node name="PlayerCharacterBase" type="CharacterBody3D" groups=["player_objects"]]
collision_layer = 64
collision_mask = 96
platform_wall_layers = 32
script = ExtResource("1_w4qtm")

[node name="Visuals" type="Node3D" parent="."]

[node name="LowerBody" type="Node3D" parent="Visuals"]

[node name="UpperBody" type="Node3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.80354, 0)

[node name="Indicators" type="Node3D" parent="Visuals"]

[node name="GhostIndicator" type="CSGSphere3D" parent="Visuals/Indicators"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
radial_segments = 4
rings = 2
material = SubResource("StandardMaterial3D_5jmjx")

[node name="SelectionIndicator" type="CSGSphere3D" parent="Visuals/Indicators"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53409, 0)
radial_segments = 4
rings = 2
material = SubResource("StandardMaterial3D_nhemo")

[node name="CollisionShapeLower" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_h5vi8")

[node name="CollisionShapeUpper" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CylinderShape3D_erfry")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24288, 0)

[node name="CameraPivot" type="Node3D" parent="Node3D"]

[node name="SpringArm3D" type="SpringArm3D" parent="Node3D/CameraPivot"]
transform = Transform3D(1.00842, 0, 0, 0, 1.00842, 0, 0, 0, 1.00842, 0, 0, 0)
collision_mask = 32
shape = SubResource("SphereShape3D_mxwbm")
spring_length = 4.0

[node name="Camera3D" type="Camera3D" parent="Node3D/CameraPivot/SpringArm3D"]

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.441064, 0)
shape = SubResource("SphereShape3D_t5a1n")

[node name="HitBox" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.134216, 0)
shape = SubResource("CylinderShape3D_mxwbm")

[node name="MovingPlatformRaycast" type="RayCast3D" parent="."]
collision_mask = 8

[node name="PlayerSelectionHitbox" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerSelectionHitbox"]
shape = SubResource("SphereShape3D_5jmjx")

[node name="PlayerSelectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerSelectionArea"]
shape = SubResource("SphereShape3D_5jmjx")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="IndicatorAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w4qtm")
}
autoplay = "default"

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="PlayerSelectionArea" to="." method="_on_player_selection_area_area_entered"]
[connection signal="area_exited" from="PlayerSelectionArea" to="." method="_on_player_selection_area_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
